--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-It's me
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <title>It's me</title>
+  </head>
+  <body>
+    It's me
+  </body>
+</html>
