--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>It's me</title>
   </head>
   <body>
-    It's me
+    It's me<br />
+    <iframe src="https://2049.run/badge/7Hkqdp" width="400" style="border: none;" > </iframe>
   </body>
 </html>
